Services/EP.Notifications.API/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ep-notifications-api-service
spec:
  type: NodePort
  selector:
    app: ep-notifications-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
      nodePort: 30011
