Services/EP.Notifications.API/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospitality-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hospitality-manager.info
      http:
        paths:
          - path: /hosp-manager
            pathType: Prefix
            backend:
              service:
                name: hosp-availability-webapi-service
                port:
                  number: 8001
